preventing horizontal scrolling with webform inputs

--- a/source/_docs/patterns/01-atoms/forms/_forms.scss
+++ b/source/_docs/patterns/01-atoms/forms/_forms.scss
@@ -43,7 +43,7 @@ textarea,
 select {
   display: inline-block;
   box-sizing: border-box;
-  width: 100%;
+  max-width: 20vw;
   margin-bottom: var(--space--md);
   padding: var(--space--xs);
   color: var(--input-text-color);
